# calibrance-data-contracts

./: .gitignore  CAPABILITY_DECLARATIONS.md  M0_PROMPT.md  README.md  pyproject.toml
src/calibrance_data_contracts/: __init__.py  activity_fingerprint.py  augmentation.py  calibration_outcome.py  calibration_parameters.py  candidate_validation.py  canonical_artifacts.py  canonical_taxonomy.py  capture_context.py  dataset.py  dynamics_signals.py  economic_context.py  enums.py  estimator_protocol.py  evidence.py  evidence_recommendation.py  honesty.py  intervention_outcome.py  model_adequacy.py  ontology.py  process_context.py  provenance.py  quality_observation.py  rights.py  signals.py  task.py  taxonomy_manifest.json  taxonomy_migration.py  timestamp_alignment.py  trajectory.py  twin_model.py
tests/: test_a1_canonical_taxonomy.py  test_a2_canonical_artifacts.py  test_a4a_estimator_protocol.py  test_candidate_validation_schemas.py  test_capture_context.py  test_economic_context_schemas.py  test_evidence_recommendation_schemas.py  test_evidence_schemas.py  test_foundational_schemas.py  test_honesty_markings.py  test_intervention_outcome_schemas.py  test_m0_contracts.py  test_process_quality_schemas.py  test_task_schema.py
