[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calibrance-data-contracts"
version = "0.1.1"
description = "Shared data schemas, enums, and type definitions for the Calibrance data foundry."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Calibrance", email = "foundry@calibrance.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "black>=23.0",
]

[project.urls]
Repository = "https://github.com/arnon-bruno/calibrance-data-contracts"

[tool.hatch.build.targets.wheel]
packages = ["src/calibrance_data_contracts"]

[tool.hatch.build.targets.sdist]
include = ["src/calibrance_data_contracts", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
